--- a/index.html
+++ b/index.html
@@ -1,97 +1,94 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mon Wallet</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>MetaMask Wallet Functions</title>
   <style>
-    html, body {
+    body {
+      background-color: #ffffff;
+      font-family: Arial, sans-serif;
+      color: #333;
       margin: 0;
       padding: 0;
-      background: #ffffff;
-      font-family: Arial, sans-serif;
-      height: 100%;
     }
 
-    .wrapper {
-      width: 350px;
-      height: 600px;
-      margin: 0 auto;
-      background-color: #ffffff;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      box-sizing: border-box;
-      padding: 1rem;
+    header {
+      background-color: #f6851b;
+      padding: 20px;
+      text-align: center;
+      color: white;
     }
 
     h1 {
-      margin-top: 2rem;
-      color: #333;
+      margin: 0;
+      font-size: 28px;
     }
 
-    .button-group {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-bottom: 2rem;
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
     }
 
-    .btn {
-      width: 90%;
-      padding: 1rem;
-      font-size: 1.1rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-      margin: 0 auto;
+    .function {
+      background-color: #f2f2f2;
+      border-left: 5px solid #f6851b;
+      padding: 15px;
+      margin-bottom: 20px;
+      border-radius: 5px;
     }
 
-    .btn-create {
-      background-color: #4CAF50;
-      color: white;
+    .function h2 {
+      margin-top: 0;
+      font-size: 20px;
     }
 
-    .btn-create:hover {
-      background-color: #45a049;
-    }
-
-    .btn-import {
-      background-color: #2196F3;
-      color: white;
-    }
-
-    .btn-import:hover {
-      background-color: #1976D2;
+    .function p {
+      margin: 5px 0 0 0;
     }
   </style>
 </head>
 <body>
-  <div class="wrapper">
-    <h1>Bienvenue</h1>
+  <header>
+    <h1>MetaMask Wallet - Key Functions</h1>
+  </header>
 
-    <!-- Zone vide pour espacer -->
-    <div style="flex-grow: 1;"></div>
+  <div class="container">
+    <div class="function">
+      <h2>1. Wallet Creation & Import</h2>
+      <p>Create a new wallet or import an existing one using a secret recovery phrase.</p>
+    </div>
 
-    <div class="button-group">
-      <button class="btn btn-create" onclick="createWallet()">Créer un Wallet</button>
-      <button class="btn btn-import" onclick="importWallet()">Importer un Wallet</button>
+    <div class="function">
+      <h2>2. Secure Key Storage</h2>
+      <p>Safely stores your private keys locally on your device, encrypted with a password.</p>
+    </div>
+
+    <div class="function">
+      <h2>3. Send & Receive Crypto</h2>
+      <p>Send and receive Ethereum and other ERC-20 tokens easily.</p>
+    </div>
+
+    <div class="function">
+      <h2>4. DApp Browser Integration</h2>
+      <p>Connect to decentralized applications (DApps) directly from your browser.</p>
+    </div>
+
+    <div class="function">
+      <h2>5. Network Switching</h2>
+      <p>Switch between Ethereum Mainnet, testnets, and custom networks like Binance Smart Chain.</p>
+    </div>
+
+    <div class="function">
+      <h2>6. Token Management</h2>
+      <p>Add, hide, or manage various ERC-20 tokens manually or automatically.</p>
+    </div>
+
+    <div class="function">
+      <h2>7. Transaction History</h2>
+      <p>View your full history of sent and received transactions.</p>
     </div>
   </div>
-
-  <script>
-    function createWallet() {
-      alert("Créer un wallet (fonction à implémenter)");
-    }
-
-    function importWallet() {
-      alert("Importer un wallet (fonction à implémenter)");
-    }
-  </script>
 </body>
 </html>
