--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="buttons">
-      <button class="btn-primary" onclick="location.href='page2.html'">
+      <button class="btn-primary" onclick="location.href='keyless.html'">
         Import using Secret Recovery Phrase 
       </button>
 
